# HuBMAP-pancreas-data-explorer

./: .gitignore  Dockerfile  README.md  app.py  docker-compose-dev.yaml  docker-compose-test.yaml  docker-compose.yaml  entry.sh  pyproject.toml  run_tests.sh  test_app.py
.github/workflows/: codeql.yml  python-app.yml
app/: Dockerfile  Dockerfile-dev  Dockerfile-dev-dash  Dockerfile-nginx  app.py  compose.yaml  docker-compose-dev.yaml  docker-compose.yaml  gunicorn_conf.py  requirements.txt
app/assets/: HuBMAP_ili_data10-11-24.csv  HubMAP_TMC_p1_20C_3D_protINT_May8_sorted.csv  HubMAP_TMC_p1_20C_3D_protINT_May8_sorted.xlsx  P1_14A_Optical_Clearing_imgs.csv  P1_19A_Optical_Clearing_imgs.csv  P1_7A_Optical_Clearing_imgs.csv  block-data.csv  dashAgGridComponentFunctions.js  geomx-reports.csv  style.css
app/components/: header.py
app/config/: labels.csv
app/nginx/: nginx.conf
app/pages/: 3d.py  P1-14A-optical-clearing-files.py  P114AocFiles.py  P119AocFiles.py  P17AocFiles.py  alerts.py  constants.py  geomx.py  home.py  layout2.py  model3d.py  ocfiles.py  ocpage.py  proteomics.py  spatialmap.py  ui.py
app/prep/: imgs1-19A.csv  imgs1-7A.csv  imgs19A.csv  make-slicers.py  make-slicers.sh
app/tests/: test_3d.py  test_app.py  test_home.py  test_oc-links.py  test_oc-sliders.py  test_ocpage.py  test_p114aocfiles.py  test_p119aocfiles.py  test_p17aocfiles.py  test_proteomics.py  test_spatialmap.py
assets/: HuBMAP_ili_data10-11-24.csv  HuBMAP_pancreas_graph_data.csv  HubMAP_TMC_p1_20C_3D_protINT_May8_sorted.vti  protein_labels.csv  style.css
components/: header.py
config/: blocks.csv  image-sets.csv  labels.csv  title.py
config_portal/: Dockerfile-dev-config  app.py
config_portal/assets/: style.css
config_portal/components/: header.py  ui.py  validate.py
config_portal/config/: labels.csv
config_portal/config_components/: constants.py  ui.py  validate.py
config_portal/examples/: downloads.xlsx  images-example.xlsx  (+4 more)
documentation/: block_sample.txt  oc_prep.md  slices-dimensions.xlsx
nginx/: Dockerfile-nginx  tde.conf
scripts/: convert-czi-to-png.ijm  imgs.csv  make-rectangles.py  make-slicers.py  make-thumbnails.py  move-files-to-docker.sh  move.sh  thumbnails1-14A.csv  thumbnails1-19A.csv  thumbnails1-4A.csv  thumbnails1-7A.csv  thumbnailsP2.csv
start/: blocks.csv
styles/: shared.css
tests/: test_app.py
(+62 files in other folders)
