[tool.poetry]
name = "hubmap-pancreas-data-explorer"
version = "0.1.0"
description = "Visualize pancreas data from the HuBMAP project"
authors = ["James Labyer"]
license = "BSD 3-Clause License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pandas = "~2.2.3"
numpy = "~2.1.3"
dash = "~2.18.2"
dash-ag-grid = "~31.3.0"
plotly = "~5.24.1"
dash-bootstrap-components = "~1.6.0"
gunicorn = "~23.0.0"
pywavefront = "~1.3.3"
pillow = "~11.0.0"
ruff = "~0.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "~8.3.4"
pytest-cov = "~6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
